# folderol

./: .gitignore  .ocamlformat  README.md  dune-project  dune-workspace  folderol.opam
dune.lock/: dune-configurator.pkg  lock.dune  ocaml-compiler.pkg
lib/: dune  env.ml  env.mli  formula.ml  formula.mli  goal.ml  goal.mli  goal_entry.ml  goal_entry.mli  goal_table.ml  goal_table.mli  inference.ml  inference.mli  instantiation.ml  instantiation.mli  lexer.mll  parser.mly  pretty_print.ml  pretty_print.mli  pretty_printing.ml  pretty_printing.mli  proof.ml  proof.mli  rule.ml  symbol.ml  symbol.mli  term.ml  term.mli  unification.ml  unification.mli  util.ml  util.mli
test/: dune  formula_test.ml  goal_entry_test.ml  goal_table_test.ml  goal_test.ml  inference_test.ml  instantiation_test.ml  parser_test.ml  symbol_test.ml  term_test.ml  test_folderol.ml  testables.ml  testsuite.ml  unification_test.ml  util_test.ml
theorems/: assoc.frl
