(ocamllex
 (modules lexer))

(menhir
 (modules parser)
 (flags
  ("--dump" "--explain")))

(library
 (public_name folderol.lib)
 (name FolderolLib)
 (inline_tests)
 (libraries core)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_inline_test)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
